Add final editing.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -157,10 +157,10 @@ footer a:hover {
 }
 
 /* Alert Messages */
-.alert {
+/* .alert {
     border-radius: 8px;
     border: none;
-}
+} */
 
 /* Pagination */
 .pagination {
