--- a/templates/admin/cars.html
+++ b/templates/admin/cars.html
@@ -32,9 +32,9 @@
                         {% for car in cars.items %}
                         <tr>
                             <td>
-                                <img src="{{ url_for('static', filename='uploads/cars/' + car.image_url) }}" 
-                                     alt="{{ car.brand }}" class="img-thumbnail" style="width: 80px;"
-                                     onerror="this.src='{{ url_for('static', filename='img/default-car.jpg') }}'">
+                                <img src="{{ url_for('static', filename='uploads/cars/' + car.image_url) }}"
+                                    alt="{{ car.brand }}" class="img-thumbnail" style="width: 80px;"
+                                    onerror="this.src='{{ url_for('static', filename='img/default-car.jpg') }}'">
                             </td>
                             <td>
                                 <strong>{{ car.brand }} {{ car.model }}</strong><br>
@@ -57,8 +57,9 @@
                                 <a href="{{ url_for('admin_edit_car', car_id=car.id) }}" class="btn btn-sm btn-warning">
                                     <i class="fas fa-edit"></i> Edit
                                 </a>
-                                <form method="POST" action="{{ url_for('admin_delete_car', car_id=car.id) }}" 
-                                      class="d-inline" onsubmit="return confirm('Are you sure you want to delete this car?');">
+                                <form method="POST" action="{{ url_for('admin_delete_car', car_id=car.id) }}"
+                                    class="d-inline"
+                                    onsubmit="return confirm('Are you sure you want to delete this car?');">
                                     <button type="submit" class="btn btn-sm btn-danger">
                                         <i class="fas fa-trash"></i> Delete
                                     </button>
@@ -81,17 +82,17 @@
                 <a class="page-link" href="{{ url_for('admin_cars', page=cars.prev_num) }}">Previous</a>
             </li>
             {% endif %}
-            
+
             {% for page_num in cars.iter_pages(left_edge=1, right_edge=1, left_current=1, right_current=2) %}
-                {% if page_num %}
-                    <li class="page-item {% if page_num == cars.page %}active{% endif %}">
-                        <a class="page-link" href="{{ url_for('admin_cars', page=page_num) }}">{{ page_num }}</a>
-                    </li>
-                {% else %}
-                    <li class="page-item disabled"><span class="page-link">...</span></li>
-                {% endif %}
+            {% if page_num %}
+            <li class="page-item {% if page_num == cars.page %}active{% endif %}">
+                <a class="page-link" href="{{ url_for('admin_cars', page=page_num) }}">{{ page_num }}</a>
+            </li>
+            {% else %}
+            <li class="page-item disabled"><span class="page-link">...</span></li>
+            {% endif %}
             {% endfor %}
-            
+
             {% if cars.has_next %}
             <li class="page-item">
                 <a class="page-link" href="{{ url_for('admin_cars', page=cars.next_num) }}">Next</a>
@@ -103,7 +104,7 @@
 
     {% else %}
     <div class="alert alert-info">
-        <i class="fas fa-info-circle"></i> No cars in the system. 
+        <i class="fas fa-info-circle"></i> No cars in the system.
         <a href="{{ url_for('admin_add_car') }}">Add your first car</a>
     </div>
     {% endif %}
