--- a/templates/login.html
+++ b/templates/login.html
@@ -41,13 +41,13 @@
 
                     <hr>
                     
-                    <div class="alert alert-info">
+                    <!-- <div class="alert alert-info">
                         <small>
                             <strong>Demo Accounts:</strong><br>
                             Admin: admin@carrental.com / admin123<br>
                             Customer: customer@example.com / password123
                         </small>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
