--- a/templates/index.html
+++ b/templates/index.html
@@ -61,9 +61,7 @@
             {% for car in cars %}
             <div class="col-md-4 mb-4">
                 <div class="card car-card h-100">
-                    <img src="{{ url_for('static', filename='uploads/cars/' + car.image_url) }}" 
-                         class="card-img-top" alt="{{ car.brand }} {{ car.model }}"
-                         onerror="this.src='{{ url_for('static', filename='img/default-car.jpg') }}'">
+                    <img src="{{ car|car_image }}" class="card-img-top" alt="{{ car.brand }} {{ car.model }}" loading="lazy">
                     <div class="card-body">
                         <span class="badge bg-primary mb-2">{{ car.category }}</span>
                         <h5 class="card-title">{{ car.brand }} {{ car.model }}</h5>
