--- a/templates/admin/car_form.html
+++ b/templates/admin/car_form.html
@@ -109,7 +109,7 @@
                             <div class="mt-2">
                                 <small class="text-muted">Current image preview:</small>
                                 <div class="mt-1">
-                                    <img src="{{ car|car_image }}" alt="{{ car.brand }} {{ car.model }}" class="img-thumbnail" style="width:160px;" loading="lazy">
+                                    <img id="imagePreview" src="{{ car|car_image }}" alt="{{ car.brand }} {{ car.model }}" class="img-thumbnail" style="width:160px;" loading="lazy">
                                 </div>
                             </div>
                             {% endif %}
